@@ -178,4 +178,7 @@
 
 - Fully implement "Logic" methods - now (R 2.4.1) that the group is in S4
 
+- when printing sparse matrices column names are suppressed.
+  For matrices *with* non-empty column names, this is now message()d.
+
 
