@@ -224,8 +224,7 @@ setMethod("Math",
 ## - - -   prMatrix() from ./Auxiliaries.R
 prSpMatrix <- function(object, digits = getOption("digits"),
                        maxp = getOption("max.print"), zero.print = ".",
-                       row.trailer = '',
-                       align = c("fancy", "right"))
+                       col.trailer = '', align = c("fancy", "right"))
 ## FIXME: prTriang() in ./Auxiliaries.R  should also get  align = "fancy"
 {
     cl <- getClassDef(class(object))
@@ -249,7 +248,7 @@ prSpMatrix <- function(object, digits = getOption("digits"),
 	    dimnames(x) <- dimnames(m)
 	}
     }
-    x <- emptyColnames(x)
+    x <- emptyColnames(x, msg.if.not.empty = TRUE)
     if(is.logical(zero.print))
 	zero.print <- if(zero.print) "0" else " "
     if(logi) {
@@ -290,8 +289,8 @@ prSpMatrix <- function(object, digits = getOption("digits"),
 	} else if (ne == 0)# all zeroes
 	    x[] <- zero.print
     }
-    if(row.trailer != '')
-        x <- cbind(x, row.trailer, deparse.level = 0)
+    if(col.trailer != '')
+        x <- cbind(x, col.trailer, deparse.level = 0)
     ## right = TRUE : cheap attempt to get better "." alignment
     print(x, quote = FALSE, right = TRUE, max = maxp)
     invisible(object)
@@ -315,8 +314,8 @@ setMethod("show", signature(object = "sparseMatrix"),
 
            suppCols <- (d[2] * 2 > useW)
            nc <- if(suppCols) (useW - (1 + 6)) %/% 2 else d[2]
-           ##                          sp+ row.trailer
-           row.trailer <- if(suppCols) "......" else ""
+           ##                          sp+ col.trailer
+           col.trailer <- if(suppCols) "......" else ""
 	   nr <- maxp %/% nc
            suppRows <- (nr < nR)
            if(suppRows) {
@@ -324,17 +323,17 @@ setMethod("show", signature(object = "sparseMatrix"),
 		   object <- object[ , 1:nc, drop = FALSE]
 	       n2 <- ceiling(nr / 2)
 	       prSpMatrix(object[seq_len(min(nR, max(1, n2))), , drop=FALSE],
-			  row.trailer = row.trailer)
+			  col.trailer = col.trailer)
 	       cat("\n ..............................",
 		   "\n ..........suppressing rows in show(); maybe adjust 'options(max.print= *)'",
 		   "\n ..............................\n\n", sep='')
 	       ## tail() automagically uses "[..,]" rownames:
 	       prSpMatrix(tail(object, max(1, nr-n2)),
-			  row.trailer = row.trailer)
+			  col.trailer = col.trailer)
 	   }
 	   else if(suppCols) {
 	       prSpMatrix(object[ , 1:nc , drop = FALSE],
-			  row.trailer = row.trailer)
+			  col.trailer = col.trailer)
 
 	       cat("\n .....suppressing columns in show(); maybe adjust 'options(max.print= *)'",
 		   "\n ..............................\n", sep='')
