@@ -1,3 +1,9 @@
+2007-06-05  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/Auxiliaries.R (emptyColnames): + argument msg.if.not.empty, used in
+	* R/sparseMatrix.R (prSpMatrix): now gives a message about
+	suppressed column names.
+
 2007-06-04 17:13  Douglas Bates <bates@stat.wisc.edu>
 
 	* [r4418] src/Csparse.c, src/HBMM.c, src/Mutils.c, src/Mutils.h,
